--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-redux": "8.0.4",
+    "redux": "4.2.0",
+    "redux-thunk": "2.4.1",
+    "@reduxjs/toolkit": "1.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
