--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "4.4.0",
     "react-redux": "^8.0.4",
+    "axios": "1.1.3",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
