--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
+    "axios": "1.1.3",
     "big-js": "^3.1.3",
     "big.js": "^6.2.1",
     "cra-template": "1.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "4.4.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.4",
-    "axios": "1.1.3",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
